adding better.css

--- a/web-fundamentals-refresher-demo/index.html
+++ b/web-fundamentals-refresher-demo/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="better.css">
   <body>
     <div>
       <h1 id="id-style" class="class-style">Hi</h1>
